@@ -8,11 +8,9 @@ import java.util.Map;
 public class MethodAnalyser extends Analyser {
 
 	private final Map<String, VariableName> argumentRegistry;
-	private final Analyser containingAnalyser;
 
 	public MethodAnalyser(String className, String packageName, int countOfArguments, boolean isClassMethod, Analyser containingAnalyser) {
-		super(className, packageName, countOfArguments, isClassMethod);
-		this.containingAnalyser = containingAnalyser;
+		super(className, packageName, countOfArguments, isClassMethod, containingAnalyser);
 		blockSequence(containingAnalyser.blockSequence() + 1);
 		argumentRegistry = new HashMap<String, VariableName>();
 	}
